# Store-Price-Scraper

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: settings.example.json
price_tracker/: __init__.py  main.py
price_tracker/gui/: __init__.py  main_window.py  price_chart.py  product_dialog.py  settings_dialog.py
price_tracker/models/: __init__.py  price_record.py  product.py
price_tracker/notifications/: __init__.py  discord_notifier.py  email_notifier.py
price_tracker/scheduler/: __init__.py  background_checker.py
price_tracker/scraper/: __init__.py  base.py  http_scraper.py  selenium_scraper.py
price_tracker/storage/: __init__.py  exporter.py  json_storage.py
src/: products.csv  products.json
src/data/: price_history.json  products.json  settings.json
tests/: conftest.py  test_background_checker.py  test_gui_mocks.py  test_http_scraper.py  test_models.py  test_notifications.py  test_scraper.py  test_selenium_scraper.py  test_storage.py
